--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -365,7 +365,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .section_event .content_clipboard .label_text{color: #FED849; font-size: 18px; font-size: 1.8rem; font-weight: 600; margin-right: 20px;}
 .section_event .content_clipboard .code_clipboard{width: 28%; background: #102521; border: 2px solid #FED849; border-radius: 5px; padding: 8px 20px;}
 .section_event .content_clipboard .code_clipboard .text_code{position: relative; top: 1px; color: #FED849; font-size: 16px; font-size: 1.6rem; font-weight: 700;}
-.section_event .clipboard_box .guide_text{display: block; font-size: 13px; font-size: 1.3rem; padding-top: 10px; color: #ddd;}
+.section_event .clipboard_box .guide_text{display: block; font-size: 13px; font-size: 1.3rem; padding-top: 10px; color: #fff;}
 .section_event .disabled a{pointer-events: none; cursor: default; }
 .section_event .content_middle .item_info{position: relative; max-width: 400px; margin: 0 auto;}
 
@@ -379,9 +379,17 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .section_event .content_box .item_title{ border-bottom: 2px dotted #ddd; padding: 20px 0 10px;}
     .section_event .content_box .item_title h3{font-size: 15px; font-size: 1.5rem;}
     .section_event .clipboard_box{bottom: 31%;}
-    .section_event .content_clipboard .label_text{font-size: 14px; font-size: 1.4rem; margin-right: 10px;}
+    .section_event .content_clipboard .label_text{font-size: 13px; font-size: 1.3rem; margin-right: 5px;}
     .section_event .content_clipboard .code_clipboard{padding: 4px 20px;}
     .section_event .content_clipboard .code_clipboard .text_code{font-size: 13px; font-size: 1.3rem;}
+    .section_event .clipboard_box.disabled{bottom: 27%;}
+    .section_event .clipboard_box.disabled .content_clipboard .code_clipboard{width: 40%; padding: 4px 10px;}
+    .section_event .clipboard_box.disabled .content_clipboard .code_clipboard .text_code{font-size: 13px; font-size: 1.3rem;}
+    .section_event .clipboard_box.disabled .guide_text{font-size: 11px; font-size: 1.1rem; font-weight: 600; padding-top: 5px}
+
+
+
+
     .section_event .content_middle .item_info{position: relative; max-width: 300px; margin: 0 auto;}
 }
 
@@ -526,6 +534,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .layer_popup .btn_box .btn_popup_close:focus{outline:0;}
 .layer_popup .btn_box .btn_popup_close .btn_close{display: inline-block; position: relative; overflow: hidden; width: 18px; height: 18px; opacity: 1;}
 .layer_popup .btn_box .btn_popup_close .icon-close:before, .layer_popup .btn_box .btn_popup_close .icon-close:after{content: ''; position: absolute; width: 100%; height:1px; top:50%; right:0; background:#fff;}
+.layer_popup .btn_box .btn_popup_close .icon-close.dark:before, .layer_popup .btn_box .btn_popup_close .icon-close.dark:after{background:#333;}
 .layer_popup .btn_box .btn_popup_close .icon-close:before{-webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg);}
 .layer_popup .btn_box .btn_popup_close .icon-close:after{-webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg)}
 .layer_popup .content_box{padding-bottom: 10px;}
@@ -534,10 +543,20 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .layer_popup .content_box .content_heading .guide_text{display: block; font-size: 13px; font-size: 1.3rem; padding-top: 10px; color: #333;}
 .layer_popup .content_box .content_item{margin: 20px 0 0;}
 
-
-@media screen and (max-width: 640px){
-
-}
+/* Popup AD Style 230825 */
+.ad_style01 .popup_header{background: #f4f4f4;}
+.ad_style01 .popup_contents{border: 1px solid #ddd; margin-top: -1px;     padding: 20px 10px;}
+.ad_style01 .header_product{display: flex; flex: 1; align-items: center;}
+.ad_style01 .header_product .img_box{position: relative; overflow: hidden; width: 58px; min-height: 48px; height: 58px; border-radius: 10px; margin-right: 15px; background: #333;}
+.ad_style01 .header_product .info_product{position: relative;}
+.ad_style01 .header_product .info_product .info_title{font-size: 15px; font-size: 1.5rem; font-weight: 600; margin-bottom: 5px;}
+.ad_style01 .badge_point.ad{background: transparent; height: 24px; padding: 0 0 0 24px;} 
+.ad_style01 .badge_point.ad .icon_point{top: 2px; left: 0; background: #e21d19; color: #fff; padding: 3px 6px;}
+.ad_style01 .badge_point.ad .point_data{color: #e21d19; font-size: 15px; font-size: 1.5rem; line-height: 1.6;}
+.ad_style01 .content_ad_info{position: relative; text-align: left; height: 400px; overflow-y: auto; padding: 10px 0 20px;}
+.ad_style01 .content_ad_info .content_heading{font-size: 13px; font-size: 1.3rem; font-weight: 600; padding: 0 10px 10px;}
+.ad_style01 .content_ad_info .content_des{line-height: 1.5; padding: 0 15px 0 10px;}
+.ad_style01 .content_box .content_item{margin-top: 30px; padding: 0 10px;}
 
 
 
